--- a/react-client/src/components/NavBar/Nav.scss
+++ b/react-client/src/components/NavBar/Nav.scss
@@ -1,18 +1,42 @@
 .login-form {
   position: relative;
   height: 600px;
-  width: 400px;
+  width: 275px;
   border-radius: 20px;
-  background: rgba(235, 239, 249, 0.5);
+  background: rgba(235, 239, 249, 0.3);
   box-shadow: 11px 11px 22px #b3b3b3, -11px -11px 22px #ffffff;
   overflow: hidden;
 }
-@import url("https://fonts.googleapis.com/css?family=Roboto:400, 100, 900");
 
-//colors
-$red: #e1332d;
-$white: #fff;
+.header__logo,
+.header__menu {
+  display: inline-block;
+  vertical-align: middle;
+}
 
+.footer__img {
+  height: 25px;
+  width: 15px;
+}
+.footer__title {
+  font-size: 16px;
+  margin-top: 5%;
+  margin-left: 5px;
+}
+.footer__black {
+  color: #2a4c6c;
+}
+
+.header__logo__title {
+  font-size: 24px;
+  margin: 0;
+  margin-left: 0px;
+  margin-left: 10px;
+  display: inline-block;
+  line-height: 18px;
+  vertical-align: middle;
+  color: #4ea8ff;
+}
 //base styles
 
 * {
@@ -47,58 +71,6 @@ $white: #fff;
   }
 }
 
-h1 {
-  color: $white;
-  font-size: 1.25em;
-  font-weight: 900;
-  margin: 0 0 2em;
-
-  @media (min-width: 450px) {
-    font-size: 1.75em;
-  }
-
-  @media (min-width: 760px) {
-    font-size: 3.25em;
-  }
-
-  @media (min-width: 900px) {
-    font-size: 5.25em;
-    margin: 0 0 1em;
-  }
-}
-
-p {
-  color: $white;
-  font-size: 12px;
-
-  @media (min-width: 600px) {
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, 0);
-    top: 90%;
-  }
-
-  @media (max-height: 500px) {
-    left: 0;
-    position: relative;
-    top: 0;
-    transform: translate(0, 0);
-  }
-
-  // a {
-  //   background: rgba($white, 0);
-  //   border-bottom: 1px solid;
-  //   color: $white;
-  //   line-height: 1.4;
-  //   padding: 0.25em;
-  //   text-decoration: none;
-
-  //   &:hover {
-  //     background: rgba($white, 1);
-  //     color: $red;
-  //   }
-  // }
-}
 //button styles
 
 //default button
@@ -109,73 +81,13 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 45px;
-  margin: 0 0 2em;
-  max-width: 160px;
   position: relative;
   text-decoration: none;
-  text-transform: uppercase;
+
   width: 100%;
-
-  //   @media(min-width: 400px) {
-  //     display: inline-block;
-  //     margin-right: 2.5em;
-
-  //     &:nth-of-type(even) {
-  //       margin-right: 0;
-  //     }
-  //   }
-
-  @media (min-width: 600px) {
-    margin: 0 1em 2em;
-
-    //     &:nth-of-type(even) {
-    //       margin-right: 2.5em;
-    //     }
-
-    //     &:nth-of-type(5) {
-    //       margin-right: 0;
-    //     }
-  }
 
   &:hover {
     text-decoration: none;
-  }
-}
-
-/////////////////////////////////
-//button one
-///////////////////////////////
-.btn-1 {
-  background: darken($red, 1.5%);
-  font-weight: 100;
-
-  svg {
-    height: 45px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-
-  rect {
-    fill: none;
-    stroke: #fff;
-    stroke-width: 2;
-    stroke-dasharray: 422, 0;
-    transition: all 0.35s linear;
-  }
-}
-
-.btn-1:hover {
-  background: rgba($red, 0);
-  font-weight: 900;
-  letter-spacing: 1px;
-
-  rect {
-    stroke-width: 5;
-    stroke-dasharray: 15, 310;
-    stroke-dashoffset: 48;
-    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
   }
 }
 
