--- a/react-client/src/Screens/01_WelcomePage/Welcome.css
+++ b/react-client/src/Screens/01_WelcomePage/Welcome.css
@@ -1,21 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i");
-
-/*Reset*/
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Lato", sans-serif;
-  color: #1f4568;
-}
-
-body {
-  background-image: url("https://image.ibb.co/de6JzG/bitmap_1_1.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
 /* colors 8a3aff, 6f79ff, 3a9fff black-> 1f4568  grey->8198ae*/
 .sect {
   padding: 90px 0;
@@ -745,8 +727,8 @@ body {
   color: #fff;
 }
 
-.footer__black{
-  color: #2A4C6C
+.footer__black {
+  color: #2a4c6c;
 }
 
 .footer__social {
@@ -790,15 +772,15 @@ body {
   }
 
   .header__logo__title {
-      font-size: 24px;
-      margin: 0;
-      margin-left: 0px;
-      margin-left: 10px;
-      display: inline-block;
-      line-height: 18px;
-      vertical-align: middle;
-      color: #4EA8FF;
-    }
+    font-size: 24px;
+    margin: 0;
+    margin-left: 0px;
+    margin-left: 10px;
+    display: inline-block;
+    line-height: 18px;
+    vertical-align: middle;
+    color: #4ea8ff;
+  }
 
   .header__el {
     display: block;
@@ -896,10 +878,7 @@ body {
   .footer {
     padding: 15px 0;
   }
-  .footer__img {
-    width: 15px;
-    height: 25px;
-  }
+
   .footer__title {
     font-size: 16px;
     margin-left: 5px;
