Fixed pics on Dashboard Screen, and Report Screen pic worked in npm install

--- a/react-client/src/Screens/06_DashboardScreen/DashBoard.css
+++ b/react-client/src/Screens/06_DashboardScreen/DashBoard.css
@@ -109,6 +109,9 @@ body {
 .price-box--blue .price-box__img {
   background-image: url("https://preview.ibb.co/nDRpmw/3.png");
 }
+.price-box--blue .price-box__img {
+  background-image: url("https://preview.ibb.co/nDRpmw/3.png");
+}
 
 .price-box__title {
   font-size: 22px;
