--- a/react-client/src/Screens/02_AuthScreen/AuthScreen.scss
+++ b/react-client/src/Screens/02_AuthScreen/AuthScreen.scss
@@ -1,111 +1,111 @@
-
-  .login-form {
-    position: relative;
-    height: 600px;
+.login-form {
+  position: relative;
+  height: 600px;
+  width: 400px;
+  border-radius: 20px;
+  background: #ebeff9;
+  box-shadow: 11px 11px 22px #b3b3b3, -11px -11px 22px #ffffff;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  .indent-a {
+    position: absolute;
+    bottom: -300px;
+    left: -100px;
+    right: 0;
+    height: 400px;
     width: 400px;
-    border-radius: 20px;
-    background: #ebeff9;
-    box-shadow: 11px 11px 22px #b3b3b3, -11px -11px 22px #ffffff;
-    overflow: hidden;
+    border-radius: 50%;
+    background: #ffffff;
+    box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
+  }
+  .indent-b {
+    position: absolute;
+    top: -300px;
+    right: -200px;
+    height: 400px;
+    width: 400px;
+    border-radius: 50%;
+    background: #ffffff;
+    box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
+  }
+  .form-header {
+    height: 45%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    .indent-a {
-      position: absolute;
-      bottom: -300px;
-      left: -100px;
-      right: 0;
-      height: 400px;
-      width: 400px;
-      border-radius: 50%;
-      background: #ffffff;
-      box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
-    }
-    .indent-b {
-      position: absolute;
-      top: -300px;
-      right: -200px;
-      height: 400px;
-      width: 400px;
-      border-radius: 50%;
-      background: #ffffff;
-      box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
-    }
-    .form-header {
-      height: 45%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      .logo-wrapper {
-        width: 100%;
-        text-align: center;
-        height: auto;
-        img {
-          height: auto;
-          width: 60px;
-          margin-bottom: 15px;
-        }
-      }
-      h2 {
-        margin: 0;
-        font-weight: 300;
-        font-size: 2em;
-      }
-      h4 {
-        margin: 0.5em 0 0 0;
-        font-weight: 300;
-        font-size: 1em;
-        opacity: 50%;
-      }
-    }
-    .forgot-link {
-      margin-top: 0.5em;
-      width: 300px;
+    flex-wrap: wrap;
+    .logo-wrapper {
+      width: 100%;
       text-align: center;
-      color: rgba(0, 0, 0, 0.5);
-      text-decoration: none;
-    }
-    .form {
-      .form-submit {
-        width: 200px;
-        height: 35px;
-        border-radius: 25px;
-        color: #fafafa;
-        border: none;
-        font-size: 1em;
-        margin: 2em 5.3em;
-        background: #47a1f2;
-        box-shadow: 5px 5px 10px #d1cdc7, -5px -5px 10px #ffffff;
-        &:hover {
-          background: #3794D7;
-        }
-        &:active {
-          background: #3794D7;
-          box-shadow: inset 7px 7px 38px #3794D7, inset -7px -7px 38px #3794D7;
-        }
+      height: auto;
+      img {
+        height: auto;
+        width: 60px;
+        margin-bottom: 15px;
       }
-      .form-field {
-        padding: 0 1em;
-        margin: 0.5em 1em 1em 1em;
-        width: 350px;
-        height: 50px;
-        font-size: 17px;
-        font-family: "Lato", sans-serif;
-        border-radius: 15px;
-        border: none;
-        text-align: center;
-        background: #ffffff;
-        box-shadow: inset 5px 5px 10px #d1cdc7, inset -2.5px -2.5px 5px #ffffff;
-        &:hover {
-          background: #fff;
-        }
-        &:focus {
-          background: #fff;
-          outline: none;
-        }
+    }
+    h2 {
+      margin: 0;
+      font-weight: 300;
+      font-size: 2em;
+    }
+    h4 {
+      margin: 0.5em 0 0 0;
+      font-weight: 300;
+      font-size: 1em;
+      opacity: 50%;
+    }
+  }
+  .forgot-link {
+    margin-top: 0.5em;
+    width: 300px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+  }
+  .form {
+    .form-submit {
+      width: 200px;
+      height: 35px;
+      border-radius: 25px;
+      color: #fafafa;
+      border: none;
+      font-size: 1em;
+      margin: 2em 5.3em;
+      background: #47a1f2;
+      box-shadow: 5px 5px 10px #d1cdc7, -5px -5px 10px #ffffff;
+      outline: none;
+      &:hover {
+        background: #3794d7;
+      }
+      &:active {
+        background: #3794d7;
+        box-shadow: inset 7px 7px 38px #3794d7, inset -7px -7px 38px #3794d7;
+      }
+    }
+    .form-field {
+      padding: 0 1em;
+      margin: 0.5em 1em 1em 1em;
+      width: 350px;
+      height: 50px;
+      font-size: 17px;
+      font-family: "Lato", sans-serif;
+      border-radius: 15px;
+      border: none;
+      text-align: center;
+      background: #ffffff;
+      box-shadow: inset 5px 5px 10px #d1cdc7, inset -2.5px -2.5px 5px #ffffff;
+      &:hover {
+        background: #fff;
+      }
+      &:focus {
+        background: #fff;
+        outline: none;
       }
     }
   }
+}
