--- a/react-client/src/components/NavBar/Nav.scss
+++ b/react-client/src/components/NavBar/Nav.scss
@@ -1,6 +1,6 @@
 .login-form1 {
   position: relative;
-  height: 38%;
+  height: 300px;
   width: 250px;
   border-radius: 20px;
   background: #ebeff9;
