--- a/react-client/src/Screens/02_AuthScreen/AuthScreen.scss
+++ b/react-client/src/Screens/02_AuthScreen/AuthScreen.scss
@@ -1,44 +1,48 @@
-.login-form {
+.auth-div {
+  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+}
+
+.login-form1 {
   position: relative;
   height: 600px;
   width: 400px;
   border-radius: 20px;
-  background: #ebeff9;
-  box-shadow: 11px 11px 22px #b3b3b3, -11px -11px 22px #ffffff;
+  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  box-shadow: 11px 11px 22px #09203f, -11px -11px 22px #537895;
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  .indent-a {
+  .indent-a1 {
     position: absolute;
     bottom: -300px;
     left: -100px;
     right: 0;
-    height: 400px;
-    width: 400px;
+    height: 350px;
+    width: 350px;
     border-radius: 50%;
-    background: #ffffff;
+    background: #115494c0;
     box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
   }
-  .indent-b {
+  .indent-b1 {
     position: absolute;
     top: -300px;
     right: -200px;
-    height: 400px;
-    width: 400px;
+    height: 350px;
+    width: 350px;
     border-radius: 50%;
-    background: #ffffff;
+    background: #115494c0;
     box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
   }
-  .form-header {
+  .form-header1 {
     height: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    .logo-wrapper {
+    .logo-wrapper1 {
       width: 100%;
       text-align: center;
       height: auto;
@@ -48,27 +52,29 @@
         margin-bottom: 15px;
       }
     }
-    h2 {
+    .h2-1 {
       margin: 0;
-      font-weight: 300;
+      font-weight: 400;
       font-size: 2em;
+      color: #ebeff9;
     }
-    h4 {
+    .h4-1 {
       margin: 0.5em 0 0 0;
-      font-weight: 300;
+      font-weight: 400;
       font-size: 1em;
       opacity: 50%;
+      color: whitesmoke;
     }
   }
-  .forgot-link {
+  .forgot-link1 {
     margin-top: 0.5em;
     width: 300px;
     text-align: center;
     color: rgba(0, 0, 0, 0.5);
     text-decoration: none;
   }
-  .form {
-    .form-submit {
+  .form1 {
+    .form-submit1 {
       width: 200px;
       height: 35px;
       border-radius: 25px;
@@ -77,7 +83,6 @@
       font-size: 1em;
       margin: 2em 5.3em;
       background: #47a1f2;
-      box-shadow: 5px 5px 10px #d1cdc7, -5px -5px 10px #ffffff;
       outline: none;
       &:hover {
         background: #3794d7;
@@ -87,7 +92,7 @@
         box-shadow: inset 7px 7px 38px #3794d7, inset -7px -7px 38px #3794d7;
       }
     }
-    .form-field {
+    .form-field1 {
       padding: 0 1em;
       margin: 0.5em 1em 1em 1em;
       width: 350px;
@@ -109,3 +114,115 @@
     }
   }
 }
+
+// .login-form {
+//   position: relative;
+//   height: 600px;
+//   width: 400px;
+//   border-radius: 20px;
+//   background: #ebeff9;
+//   box-shadow: 11px 11px 22px #b3b3b3, -11px -11px 22px #ffffff;
+//   overflow: hidden;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: flex-start;
+//   align-items: center;
+//   .indent-a {
+//     position: absolute;
+//     bottom: -300px;
+//     left: -100px;
+//     right: 0;
+//     height: 400px;
+//     width: 400px;
+//     border-radius: 50%;
+//     background: #ffffff;
+//     box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
+//   }
+//   .indent-b {
+//     position: absolute;
+//     top: -300px;
+//     right: -200px;
+//     height: 400px;
+//     width: 400px;
+//     border-radius: 50%;
+//     background: #ffffff;
+//     box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
+//   }
+//   .form-header {
+//     height: 45%;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     .logo-wrapper {
+//       width: 100%;
+//       text-align: center;
+//       height: auto;
+//       img {
+//         height: auto;
+//         width: 60px;
+//         margin-bottom: 15px;
+//       }
+//     }
+//     h2 {
+//       margin: 0;
+//       font-weight: 300;
+//       font-size: 2em;
+//     }
+//     h4 {
+//       margin: 0.5em 0 0 0;
+//       font-weight: 300;
+//       font-size: 1em;
+//       opacity: 50%;
+//     }
+//   }
+//   .forgot-link {
+//     margin-top: 0.5em;
+//     width: 300px;
+//     text-align: center;
+//     color: rgba(0, 0, 0, 0.5);
+//     text-decoration: none;
+//   }
+//   .form {
+//     .form-submit {
+//       width: 200px;
+//       height: 35px;
+//       border-radius: 25px;
+//       color: #fafafa;
+//       border: none;
+//       font-size: 1em;
+//       margin: 2em 5.3em;
+//       background: #47a1f2;
+//       box-shadow: 5px 5px 10px #d1cdc7, -5px -5px 10px #ffffff;
+//       outline: none;
+//       &:hover {
+//         background: #3794d7;
+//       }
+//       &:active {
+//         background: #3794d7;
+//         box-shadow: inset 7px 7px 38px #3794d7, inset -7px -7px 38px #3794d7;
+//       }
+//     }
+//     .form-field {
+//       padding: 0 1em;
+//       margin: 0.5em 1em 1em 1em;
+//       width: 350px;
+//       height: 50px;
+//       font-size: 17px;
+//       font-family: "Lato", sans-serif;
+//       border-radius: 15px;
+//       border: none;
+//       text-align: center;
+//       background: #ffffff;
+//       box-shadow: inset 5px 5px 10px #d1cdc7, inset -2.5px -2.5px 5px #ffffff;
+//       &:hover {
+//         background: #fff;
+//       }
+//       &:focus {
+//         background: #fff;
+//         outline: none;
+//       }
+//     }
+//   }
+// }
