--- a/react-client/src/Screens/01_WelcomePage/Hero.css
+++ b/react-client/src/Screens/01_WelcomePage/Hero.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,400;1,500;1,700&display=swap");
 .header-top {
   color: orangered;
   display: flex;
@@ -67,7 +68,8 @@ video {
 }
 .hero-h3 {
   color: white;
-  font-size: 1em;
+  font-size: 0.75em;
+  font-family: "Rubik";
 }
 .hero-h5 {
   color: white;
@@ -81,14 +83,15 @@ video {
 }
 .ghost-button {
   display: inline-block;
-  width: 20vw;
-  padding: 0.2em;
+  width: 10em;
+  padding-top: 0.75em;
+  padding-bottom: 0.75em;
   margin-top: 10em;
   margin-left: 1em;
   color: #fff;
   border: 1px solid #fff;
   border-radius: 1em;
-  font-size: 0.5em;
+  font-size: 0.42em;
   text-align: center;
   outline: none;
   text-decoration: none;
@@ -100,7 +103,7 @@ video {
 }
 
 .services {
-  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background-image: #1f4467;
   display: flex;
   color: white;
   justify-content: center;
@@ -115,8 +118,7 @@ video {
   font-size: 3em;
   font-weight: 2em;
   margin-top: 0px;
-  /* color: whitesmoke; */
-  color: #3a9fff;
+  color: whitesmoke;
 }
 .pricing-subtitle {
   text-align: center;
