--- a/react-client/src/Screens/01_WelcomePage/Hero.css
+++ b/react-client/src/Screens/01_WelcomePage/Hero.css
@@ -128,3 +128,20 @@ video {
   /* color: #3a9fff; */
   color: whitesmoke;
 }
+.footer-address {
+  margin-left: 1.4em;
+}
+.footer-address-h5 {
+  font-size: 0.8em;
+  font-weight: 0.3em;
+  margin-top: 0px;
+  color: whitesmoke;
+}
+
+.footer-copyright {
+  text-align: center;
+  font-size: 0.7em;
+  font-weight: 0.3em;
+  margin-top: 0px;
+  color: grey;
+}
