changed show screen

--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  background-image: url("https://image.ibb.co/de6JzG/bitmap_1_1.png");
+  background: #202227;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
