--- a/react-client/src/components/Weather/Weather.css
+++ b/react-client/src/components/Weather/Weather.css
@@ -3,7 +3,6 @@
   background-size: cover;
   background-position: center;
 }
-
 .main-container {
   height: 100%;
   display: flex;
@@ -11,7 +10,6 @@
   align-items: center;
   flex-direction: column;
 }
-
 .city {
   display: flex;
   align-items: center;
@@ -22,24 +20,21 @@
   background: rgba(250, 250, 250, 0.85);
   box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
 }
-
-
 .city-temp {
   font-size: 5rem;
   font-weight: bold;
-  margin-top: 10px;
-  color: #1e2432;
+  color: #c5c5c5;
   text-align: center;
+  margin-bottom: 0.125em;
 }
-
 .city sup {
   font-size: 0.2em;
 }
-
 .city-name {
   font-size: 22px;
+  margin: 0;
+  margin-bottom: 1.5em;
 }
-
 .city-name sup {
   padding: 0.2em 0.6em;
   margin-left: 0.2em;
@@ -47,24 +42,20 @@
   color: #fff;
   background: #ff8c00;
 }
-
 .city-icon {
   margin-top: 10px;
   width: 100px;
   height: 100px;
 }
-
 .info {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 @media only screen and (max-width: 600px) {
   .search {
     padding: 20px 15%;
   }
-
   .city {
     padding: 40px 20%;
   }
